--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ a:active { /* selected link */
   background-color: #BCD0C2;
   color: #0B3540; /* needed to override the default link color */
   font-weight: 300;
+  text-decoration: none;
   padding: 10px;
   border-radius: 3px;
   border-bottom: 2px solid #0B3540; /* width of the border, type, color */
@@ -84,7 +85,6 @@ a:active { /* selected link */
 }
 .button:hover {
   opacity: 0.8; /* Reduces the opacity of the button to 80% */
-  text-decoration: none;
   color: #0B3540;
 }
 .button:active{ /* selected link */
@@ -197,6 +197,32 @@ nav > ul > li > a:active {
 .social {
   margin-top: 15px;
 }
+.svg {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+@keyframes color-change {
+  from {fill: #edc655;}
+  to {fill: #f76414;}
+}
+.sun {
+  animation: 4s color-change infinite alternate linear;
+}
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+.cloud-front {
+  animation: 30s cloud-move infinite alternate linear;
+}
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px, 48px);}
+}
+.cloud-back {
+  animation: 34s cloud-move-reverse infinite alternate linear;
+}
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
@@ -233,6 +259,17 @@ Medium devices (640px and larger)
 Large devices (1024px or larger)
 ================================= */
 @media only screen and (min-width: 1024px) {
+  .col-lg-7 {
+    width: 60%
+  }
+  .col-lg-5 {
+    width: 40%
+  }
+  .container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  }
 }
 /* ==============================
 X-large devices (1440px or larger)
