--- a/css/style.css
+++ b/css/style.css
@@ -211,14 +211,14 @@ nav > ul > li > a:active {
 }
 @keyframes cloud-move {
   from {transform: translate(0,50px);}
-  to {transform: translate(200px,50px);}
+  to {transform: translate(200px,80px);}
 }
 .cloud-front {
   animation: 30s cloud-move infinite alternate linear;
 }
 @keyframes cloud-move-reverse {
-  from {transform: translate(446px,48px);}
-  to {transform: translate(100px, 48px);}
+  from {transform: translate(446px,80px);}
+  to {transform: translate(100px, 80px);}
 }
 .cloud-back {
   animation: 34s cloud-move-reverse infinite alternate linear;
@@ -271,9 +271,12 @@ Large devices (1024px or larger)
     width: 40%
   }
   .container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  body {
+    font-size: 18px;
   }
 }
 /* ==============================
